--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
     <!-- Footer -->
     <footer class="footer section">
       <div class="container">
+        <!-- Address -->
         <div class="footer-address">
-          <!-- Address -->
           <a href="index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
           <address>
             <a
@@ -364,6 +364,7 @@
             </li>
           </ul>
         </div>
+        <!-- Footer-join -->
         <div class="footer-join">
           <p class="footer-join-text uppercase">Присоединяйтесь</p>
           <div class="footer-socials">
@@ -395,18 +396,78 @@
             </div>
           </div>
         </div>
+
+        <!-- Form Footer Subscription -->
+        <form class="footer-form" autocomplete="off">
+          <div class="form-fild-footer">
+            <label class="footer-form-label" for="email">Подпишитесь на рассылку</label>
+            <input
+              class="footer-form-input"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
+          </div>
+          <!-- <div class="footer-form-btn-container"> -->
+          <button class="footer-form-btn" type="submit">Подписаться</button>
+          <!-- </div> -->
+        </form>
       </div>
     </footer>
 
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p></p>
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="icon-close" width="18" height="18">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+
+        <!---- Form data------>
+        <form class="form-data" autocomplete="off">
+          <h2 class="form-title">Оставьте свои данные, мы вам перезвоним</h2>
+
+          <div class="form-field data">
+            <label class="label-data" for="name">Имя</label>
+            <input class="form-field-input" type="text" name="name" id="name" />
+          </div>
+
+          <div class="form-field data">
+            <label class="label-data" for="tel">Телефон</label>
+            <input class="form-field-input" type="number" name="tel" id="tel" />
+          </div>
+
+          <div class="form-field data">
+            <label class="label-data" for="email">Почта</label>
+            <input class="form-field-input" type="email" name="email" id="email" />
+          </div>
+
+          <div class="form-field data textarea">
+            <label class="label-data" for="coment">Коментарий</label>
+            <textarea
+              class="textarea-data"
+              name="coment"
+              id="coment"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+
+          <div class="form-field-checkbox">
+            <input
+              class="form-field-checkbox-input visually-hidden"
+              type="checkbox"
+              name="checkbox-policy"
+              id="policy"
+            />
+            <label class="label-data-policy" for="policy"
+              >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label
+            >
+          </div>
+
+          <button class="button-form-submit" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
 
