--- a/index.html
+++ b/index.html
@@ -432,16 +432,25 @@
           <div class="form-field data">
             <label class="label-data" for="name">Имя</label>
             <input class="form-field-input" type="text" name="name" id="name" />
+            <svg class="icon-form-item" width="18" height="18">
+              <use class="icon-person-form" href="./images/icons.svg#icon-person-form"></use>
+            </svg>
           </div>
 
           <div class="form-field data">
             <label class="label-data" for="tel">Телефон</label>
             <input class="form-field-input" type="number" name="tel" id="tel" />
+            <svg class="icon-form-item" width="18" height="18">
+              <use class="icon-phone-form" href="./images/icons.svg#icon-phone-form"></use>
+            </svg>
           </div>
 
           <div class="form-field data">
             <label class="label-data" for="email">Почта</label>
             <input class="form-field-input" type="email" name="email" id="email" />
+            <svg class="icon-form-item" width="18" height="18">
+              <use class="icon-email-form" href="./images/icons.svg#icon-email-form"></use>
+            </svg>
           </div>
 
           <div class="form-field data textarea">
@@ -461,6 +470,11 @@
               name="checkbox-policy"
               id="policy"
             />
+            <span class="check-box"
+              ><svg class="icon-form-checkbox" width="16" height="15">
+                <use class="icon-check-form" href="./images/icons.svg#icon-check-form"></use></svg
+            ></span>
+
             <label class="label-data-policy" for="policy"
               >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label
             >
