--- a/index.html
+++ b/index.html
@@ -409,9 +409,12 @@
               placeholder="E-mail"
             />
           </div>
-          <!-- <div class="footer-form-btn-container"> -->
-          <button class="footer-form-btn" type="submit">Подписаться</button>
-          <!-- </div> -->
+          <div class="footer-form-btn-box">
+            <button class="footer-form-btn" type="submit">Подписаться</button>
+            <svg class="footer-form-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-icon-send"></use>
+            </svg>
+          </div>
         </form>
       </div>
     </footer>
@@ -439,7 +442,7 @@
 
           <div class="form-field data">
             <label class="label-data" for="tel">Телефон</label>
-            <input class="form-field-input" type="number" name="tel" id="tel" />
+            <input class="form-field-input" type="tel" name="tel" id="tel" />
             <svg class="icon-form-item" width="18" height="18">
               <use class="icon-phone-form" href="./images/icons.svg#icon-phone-form"></use>
             </svg>
