--- a/index.html
+++ b/index.html
@@ -467,6 +467,22 @@
           </div>
 
           <div class="form-field-checkbox">
+            <label class="label-data-policy" for="policy">
+              <input
+                class="form-field-checkbox-input visually-hidden"
+                type="checkbox"
+                name="checkbox-policy"
+                id="policy"
+              />
+              <span class="check-box"
+                ><svg class="icon-form-checkbox" width="16" height="15">
+                  <use class="icon-check-form" href="./images/icons.svg#icon-check-form"></use></svg
+              ></span>
+              <span>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></span>
+            </label>
+          </div>
+
+          <!-- <div class="form-field-checkbox">
             <input
               class="form-field-checkbox-input visually-hidden"
               type="checkbox"
@@ -481,7 +497,7 @@
             <label class="label-data-policy" for="policy"
               >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label
             >
-          </div>
+          </div> -->
 
           <button class="button-form-submit" type="submit">Отправить</button>
         </form>
