--- a/portfolio.html
+++ b/portfolio.html
@@ -249,8 +249,8 @@
     <!-- Footer -->
     <footer class="footer section">
       <div class="container">
+        <!-- Address -->
         <div class="footer-address">
-          <!-- Address -->
           <a href="index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
           <address>
             <a
@@ -270,6 +270,7 @@
             </li>
           </ul>
         </div>
+        <!-- Footer-join -->
         <div class="footer-join">
           <p class="footer-join-text uppercase">Присоединяйтесь</p>
           <div class="footer-socials">
@@ -301,6 +302,26 @@
             </div>
           </div>
         </div>
+
+        <!-- Form Footer Subscription -->
+        <form class="footer-form" autocomplete="off">
+          <div class="form-fild-footer">
+            <label class="footer-form-label" for="email">Подпишитесь на рассылку</label>
+            <input
+              class="footer-form-input"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
+          </div>
+          <div class="footer-form-btn-box">
+            <button class="footer-form-btn" type="submit">Подписаться</button>
+            <svg class="footer-form-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-icon-send"></use>
+            </svg>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
