--- a/index.html
+++ b/index.html
@@ -478,7 +478,10 @@
                 ><svg class="icon-form-checkbox" width="16" height="15">
                   <use class="icon-check-form" href="./images/icons.svg#icon-check-form"></use></svg
               ></span>
-              <span>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></span>
+              <span
+                >Соглашаюсь с рассылкой и принимаю
+                <a class="icon-form-checkbox-link" href="">Условия договора</a></span
+              >
             </label>
           </div>
 
